--- a/Site/index.html
+++ b/Site/index.html
@@ -14,8 +14,13 @@
         <li><a href="#news">News</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="#about">About</a></li>
-      </ul>
+    </ul>
     <div class="wrapper">
+
+        <video id="videoBG" autoplay muted loop>
+            <source src="media/vid/bgloop.mp4" type="video/mp4">
+        </video>
+
         <section id="zaufali">
             <h4 class="section-title">ZAUFALI NAM</h4>
             <div class="div-left">
