--- a/Site/index.html
+++ b/Site/index.html
@@ -29,9 +29,7 @@
                 </p>
             </div>
             <div class="div-right">
-                <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto perferendis veniam delectus sint qui! Blanditiis, ea temporibus, minima cum magni dolor inventore, explicabo doloribus soluta veniam officiis et reiciendis suscipit.
-                </p> 
+                <img class="image1"src="media/img/screen1.png" alt="Screen">
             </div>
         </section>
         <section id="zaufali">
